[package]
name = "sananmuunnos"
version = "0.1.0"
authors = ["Antti Häyrynen <antti.hayrynen@gmail.com>"]
edition = "2018"

[dependencies]
xml-rs = "0.8.17"
unicode-segmentation = "1.10.1"
array_tool = "1.0.3"
clap = "3.2.25"
serde = "1.0.188"
rand = "0.8.5"
chrono = { version = "0.4.29", features = ["serde"] }
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dependencies.async-std]
version = "1.12.0"
features = ["attributes", "tokio1"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
default-features = false
features = ["diesel_postgres_pool"]

[[bin]]
name = "sananmuunnos"
path = "src/main.rs"

[[bin]]
name = "sananmuunnos-webapp"
path = "src/webapp.rs"

