[package]
name = "sananmuunnos"
version = "0.1.0"
authors = ["Antti Häyrynen <antti.hayrynen@gmail.com>"]
edition = "2018"

[dependencies]
xml-rs = "0.8.22"
unicode-segmentation = "1.12.0"
array_tool = "1.0.3"
clap = "3.2.25"
serde = "1.0.213"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.async-std]
version = "1.13.0"
features = ["attributes", "tokio1"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
default-features = false
features = ["diesel_postgres_pool"]

[[bin]]
name = "sananmuunnos"
path = "src/main.rs"

[[bin]]
name = "sananmuunnos-webapp"
path = "src/webapp.rs"

